[dyad] wrote 3 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -234,7 +234,8 @@
     "scan_food": "Scan Food",
     "scan_menu": "Scan Menu",
     "log_exercise": "Log Exercise",
-    "log_weight": "Log Weight"
+    "log_weight": "Log Weight",
+    "log_water": "Log Water"
   },
   "scanner": {
     "starting": "Starting camera...",
@@ -598,12 +599,12 @@
     "gender": "Gender",
     "goal": "Goal",
     "experience": "Experience",
-    "gender_female": "Female",
-    "gender_male": "Male",
-    "gender_not_say": "Prefer not to say",
-    "goal_lose": "Lose Weight",
-    "goal_maintain": "Maintain Weight",
-    "goal_gain": "Gain Weight",
+    "gender_female": "Femenino",
+    "gender_male": "Masculino",
+    "gender_not_say": "Prefiero no decirlo",
+    "goal_lose": "Perder Peso",
+    "goal_maintain": "Mantener Peso",
+    "goal_gain": "Ganar Peso",
     "experience_several": "Used several apps",
     "experience_one_or_two": "Used one or two apps",
     "experience_first_time": "First time using an app"
@@ -617,7 +618,7 @@
     "time_format_title": "Time Format",
     "time_format_12h": "12 Hours (AM/PM)",
     "time_format_24h": "24 Hours",
-    "toast_error": "Fallo al guardar la preferencia."
+    "toast_error": "Failed to save preference."
   },
   "nutritional_goals": {
     "title": "Metas Nutricionales",
@@ -628,26 +629,26 @@
     "carbs": "Carbohidratos",
     "fats": "Grasas",
     "sugars": "Azúcares",
-    "save_error": "Fallo al guardar las metas.",
-    "ai_suggestions": "Sugerencias de IA"
+    "save_error": "Failed to save goals.",
+    "ai_suggestions": "AI Suggestions"
   },
   "ai_suggestions": {
-    "workouts_label": "Entrenamientos Semanales",
-    "workouts_per_week": "por semana",
-    "workouts_light": "Ligero (1-2)",
-    "workouts_moderate": "Moderado (3-4)",
-    "workouts_active": "Activo (5-6)",
-    "workouts_very_active": "Muy Activo (7+)",
-    "goal_weight_label": "Meta de Peso",
-    "rate_label": "Ritmo Semanal",
-    "week": "semana",
-    "summary_title": "Resumen y Generación",
-    "disclaimer": "La IA utilizará esta información para calcular tus objetivos óptimos de calorías y macros.",
-    "continue": "Continuar",
-    "generate": "Generar Metas",
-    "generate_loading": "Generando...",
-    "toast_success": "¡Nuevas metas generadas y guardadas!",
-    "toast_error": "Fallo al generar metas."
+    "workouts_label": "Weekly Workouts",
+    "workouts_per_week": "per week",
+    "workouts_light": "Light (1-2)",
+    "workouts_moderate": "Moderate (3-4)",
+    "workouts_active": "Active (5-6)",
+    "workouts_very_active": "Very Active (7+)",
+    "goal_weight_label": "Goal Weight",
+    "rate_label": "Weekly Rate",
+    "week": "week",
+    "summary_title": "Summary & Generation",
+    "disclaimer": "AI will use this info to calculate your optimal calorie and macro targets.",
+    "continue": "Continue",
+    "generate": "Generate Goals",
+    "generate_loading": "Generating...",
+    "toast_success": "New goals generated and saved!",
+    "toast_error": "Failed to generate goals."
   },
   "weight_goal": {
     "title": "Meta de Peso",
@@ -658,80 +659,93 @@
     "updated_today": "Actualizado hoy"
   },
   "ring_colors": {
-    "title": "Colores de Anillos",
-    "subtitle": "Entiende lo que significa cada color en tus anillos de progreso diario.",
-    "green_title": "Verde (Principal)",
-    "green_desc": "Estás dentro del 10% de tu objetivo (o lo has superado de forma segura).",
-    "yellow_title": "Amarillo (Ámbar)",
-    "yellow_desc": "Estás entre un 10% y un 20% por encima de tu objetivo (e.g. demasiadas calorías).",
-    "red_title": "Rojo (Destructivo)",
-    "red_desc": "Estás más del 20% por encima de tu objetivo, indicando un exceso significativo.",
-    "dotted_title": "Línea Punteada",
-    "dotted_desc": "No hay datos registrados para este día aún."
+    "title": "Ring Colors",
+    "subtitle": "Understand what each color means on your daily progress rings.",
+    "green_title": "Green (Main)",
+    "green_desc": "You are within 10% of your goal (or exceeded it safely).",
+    "yellow_title": "Yellow (Amber)",
+    "yellow_desc": "You are between 10% and 20% over your goal (e.g. too many calories).",
+    "red_title": "Red (Destructive)",
+    "red_desc": "You are more than 20% over your goal, indicating significant excess.",
+    "dotted_title": "Dotted Line",
+    "dotted_desc": "No data logged for this day yet."
   },
   "request_feature": {
-    "title": "Solicitar una Función",
-    "subtitle": "¡Ayúdanos a mejorar Calorel!",
-    "description": "Vota por funciones existentes o sugiere una nueva. Las más votadas son priorizadas.",
-    "search_placeholder": "Buscar solicitudes existentes...",
-    "create_button": "Nueva Solicitud",
-    "delete_toast_success": "Solicitud eliminada con éxito.",
-    "delete_toast_error": "Fallo al eliminar solicitud."
+    "title": "Request a Feature",
+    "subtitle": "Help us improve Calorel!",
+    "description": "Vote for existing features or suggest a new one. Most voted are prioritized.",
+    "search_placeholder": "Search existing requests...",
+    "create_button": "New Request",
+    "delete_toast_success": "Request deleted successfully.",
+    "delete_toast_error": "Failed to delete request."
   },
   "new_request_drawer": {
-    "title": "Sugerir una Nueva Función",
-    "description": "Describe la función que te gustaría ver en Calorel.",
-    "title_label": "Título",
-    "title_placeholder": "Ej: Añadir integración con Apple Health",
-    "desc_label": "Descripción Detallada",
-    "desc_placeholder": "Explica por qué es importante esta función y cómo debería funcionar.",
-    "submit_button": "Enviar Solicitud",
-    "cancel_button": "Cancelar",
-    "toast_success": "¡Solicitud de función enviada con éxito!",
-    "toast_error": "Fallo al enviar solicitud."
+    "title": "Suggest a New Feature",
+    "description": "Describe the feature you would like to see in Calorel.",
+    "title_label": "Title",
+    "title_placeholder": "e.g., Add Apple Health integration",
+    "desc_label": "Detailed Description",
+    "desc_placeholder": "Explain why this feature is important and how it should work.",
+    "submit_button": "Submit Request",
+    "cancel_button": "Cancel",
+    "toast_success": "Feature request submitted successfully!",
+    "toast_error": "Failed to submit request."
   },
   "language_drawer": {
-    "title": "Seleccionar Idioma"
+    "title": "Select Language"
   },
   "toasts": {
-    "coming_soon_title": "Próximamente",
-    "coming_soon_desc": "Esta función está en desarrollo.",
-    "delete_success_title": "Cuenta Eliminada",
-    "delete_success_desc": "Tu cuenta y todos los datos asociados han sido eliminados permanentemente.",
-    "delete_error_title": "Fallo al Eliminar"
+    "coming_soon_title": "Coming Soon",
+    "coming_soon_desc": "This feature is currently in development.",
+    "delete_success_title": "Account Deleted",
+    "delete_success_desc": "Your account and all associated data have been permanently deleted.",
+    "delete_error_title": "Failed to Delete"
   },
   "tutorial": {
-    "welcome_title": "¡Bienvenido a Calorel!",
-    "welcome_content": "Vamos a dar un rápido recorrido por las funciones principales para que comiences tu viaje de salud.",
-    "carousel_title": "Tu Resumen Diario",
-    "carousel_content": "Aquí encontrarás tu progreso diario de calorías, macros y otras métricas clave. ¡Desliza para ver más detalles!",
-    "scanner_title": "Registra Todo Fácilmente",
-    "scanner_content": "Toca el botón central para abrir el menú. Puedes escanear tu comida con IA, registrar un ejercicio o añadir entradas manualmente.",
-    "progress_title": "Sigue Tu Progreso",
-    "progress_content": "Visita la pestaña de Progreso para ver la evolución de tu peso, tu IMC y seguir tus rachas diarias.",
-    "settings_title": "Personaliza Tu Experiencia",
-    "settings_content": "En Ajustes, puedes modificar tus metas, cambiar preferencias y gestionar tu cuenta.",
-    "finish": "Finalizar",
-    "next": "Siguiente"
+    "welcome_title": "Welcome to Calorel!",
+    "welcome_content": "Let's take a quick tour of the main features to start your health journey.",
+    "carousel_title": "Your Daily Summary",
+    "carousel_content": "Here you will find your daily progress for calories, macros, and other key metrics. Swipe to see more details!",
+    "scanner_title": "Log Everything Easily",
+    "scanner_content": "Tap the center button to open the menu. You can scan your food with AI, log an exercise, or add entries manually.",
+    "progress_title": "Track Your Progress",
+    "progress_content": "Visit the Progress tab to see your weight evolution, BMI, and track your daily streaks.",
+    "settings_title": "Customize Your Experience",
+    "settings_content": "In Settings, you can modify your goals, change preferences, and manage your account.",
+    "finish": "Finish",
+    "next": "Next"
   },
   "notifications": {
-    "title": "Mantén la Constancia",
-    "description": "Activa las notificaciones para recibir recordatorios de comidas, hidratación y control de peso. ¡Te ayudará a no perder el ritmo!",
-    "enable_button": "Activar Notificaciones",
-    "skip_button": "Quizás más tarde",
-    "breakfast_title": "Buenos Días",
-    "breakfast_body": "Empieza tu día registrando tu desayuno.",
-    "food_title": "Hora de Comer",
-    "food_body_1": "¿Qué hay de rico hoy? Regístralo.",
-    "dinner_title_1": "Hora de Cenar",
-    "dinner_body_1": "No olvides registrar tu última comida.",
+    "title": "Stay Consistent",
+    "description": "Turn on notifications to get reminders for meals, hydration, and weight checks. It helps you stay on track!",
+    "enable_button": "Enable Notifications",
+    "skip_button": "Maybe Later",
+    "breakfast_title": "Good Morning",
+    "breakfast_body": "Start your day by logging your breakfast.",
+    "food_title": "Lunch Time",
+    "food_body_1": "What's for lunch? Log it now.",
+    "dinner_title_1": "Dinner Time",
+    "dinner_body_1": "Don't forget to log your last meal.",
     "snack_title": "Snack Time",
-    "snack_body": "Pequeña pausa, registra tu snack.",
-    "water_title_1": "Hidratación",
-    "water_body_1": "Tu cuerpo necesita agua. ¡Bebe un vaso!",
-    "water_title_2": "Hábito Saludable",
-    "water_body_2": "Mantente hidratado para mejores resultados.",
-    "weight_title_1": "Control de Peso",
-    "weight_body_1": "Actualiza tu peso hoy para ver tu progreso."
+    "snack_body": "Quick break, log your snack.",
+    "water_title_1": "Hydration",
+    "water_body_1": "Your body needs water. Drink a glass!",
+    "water_title_2": "Healthy Habit",
+    "water_body_2": "Stay hydrated for better results.",
+    "weight_title_1": "Weight Control",
+    "weight_body_1": "Update your weight today to see your progress."
+  },
+  "bottom_nav": {
+    "home": "Inicio",
+    "settings": "Perfil",
+    "profile": "Perfil",
+    "progress": "Progreso",
+    "diets": "Dietas",
+    "log_title": "Registrar Actividad",
+    "scan_food": "Escanear Comida",
+    "scan_menu": "Escanear Menú",
+    "log_exercise": "Registrar Ejercicio",
+    "log_weight": "Registrar Peso",
+    "log_water": "Registrar Agua"
   }
 }
