[dyad] Moviendo la entrada manual de comida - wrote 6 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -227,13 +227,14 @@
   },
   "bottom_nav": {
     "home": "Home",
-    "settings": "Settings",
+    "settings": "Profile",
     "profile": "Profile",
     "progress": "Progress",
     "diets": "Diets",
     "log_title": "Log Activity",
     "scan_food": "Scan Food",
     "scan_menu": "Scan Menu",
+    "describe_food": "Describe Food",
     "log_exercise": "Log Exercise",
     "log_weight": "Log Weight",
     "log_water": "Log Water"
