--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -234,6 +234,7 @@
     "log_title": "Registrar Actividad",
     "scan_food": "Escanear Comida",
     "scan_menu": "Escanear Menú",
+    "describe_food": "Describir Comida",
     "log_exercise": "Registrar Ejercicio",
     "log_weight": "Registrar Peso",
     "log_water": "Registrar Agua"
@@ -747,6 +748,7 @@
     "log_title": "Registrar Actividad",
     "scan_food": "Escanear Comida",
     "scan_menu": "Escanear Menú",
+    "describe_food": "Describir Comida",
     "log_exercise": "Registrar Ejercicio",
     "log_weight": "Registrar Peso",
     "log_water": "Registrar Agua"
