--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -275,6 +275,35 @@
         "Add crushed tomatoes, salt, pepper, and herbs. Simmer for 10–15 minutes.",
         "Mix pasta with sauce or serve sauce over spaghetti."
       ]
+    },
+    "grilled_chicken_rice": {
+      "name": "Grilled Chicken with Rice and Salad",
+      "ingredients": "Ingredients",
+      "steps": "Steps",
+      "nutritional_info": "Nutritional Info",
+      "per_serving": "Per serving",
+      "time_total": "Total time",
+      "minutes": "minutes",
+      "to_taste": "to taste",
+      "add_to_log": "Add to Diary",
+      "portions": "Portions",
+      "list": {
+        "chicken_breast": "Chicken breast",
+        "white_rice": "Uncooked white rice",
+        "lettuce": "Lettuce",
+        "tomato": "Tomato",
+        "olive_oil": "Olive oil",
+        "salt": "Salt",
+        "pepper": "Pepper",
+        "lemon_juice": "Lemon juice"
+      },
+      "instructions": [
+        "Cook the rice in salted water for 15–18 minutes. Drain.",
+        "Season the chicken breast with salt and pepper.",
+        "Heat a pan or griddle with 5 g of oil and cook the chicken for 5–6 minutes per side until well cooked.",
+        "Chop the lettuce and tomato, mix and dress with lemon juice and the remaining 5 g of oil.",
+        "Serve the chicken alongside the rice and salad."
+      ]
     }
   },
   "scanner": {
