--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -304,6 +304,31 @@
         "Chop the lettuce and tomato, mix and dress with lemon juice and the remaining 5 g of oil.",
         "Serve the chicken alongside the rice and salad."
       ]
+    },
+    "blueberry_almond_smoothie": {
+      "name": "Blueberry Almond Smoothie",
+      "ingredients": "Ingredients",
+      "steps": "Steps",
+      "nutritional_info": "Nutritional Info",
+      "per_serving": "Per serving",
+      "time_total": "Total time",
+      "minutes": "minutes",
+      "to_taste": "to taste",
+      "add_to_log": "Add to Diary",
+      "portions": "Portions",
+      "list": {
+        "blueberries": "Fresh blueberries",
+        "almond_milk": "Unsweetened almond milk",
+        "almonds": "Raw almonds",
+        "yogurt": "Non-fat plain yogurt",
+        "honey": "Honey (optional)"
+      },
+      "instructions": [
+        "Place blueberries, almond milk, almonds, and yogurt in a blender.",
+        "Blend for 30–45 seconds until smooth.",
+        "Taste and add honey if more sweetness is desired. Blend for a few more seconds.",
+        "Serve immediately."
+      ]
     }
   },
   "scanner": {
